# Reality-Mapper

./: README.md  pyproject.toml
Documents/CSSE6400/coughoverflow-V4N5HM-main/: Dockerfile  README.md  local.sh  main.py  pyproject.toml
Documents/CSSE6400/coughoverflow-V4N5HM-main/app/: __init__.py  database.py  models.py  routes.py  worker.py
Downloads/2024-neurals-main/: README.md
Downloads/2024-neurals-main/codebase/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
Downloads/2024-neurals-main/codebase/frontend/src/: App.tsx  CarePlan.tsx  Chart.tsx  FHIRClientProvider.tsx  GenHealthPrediction.tsx  Home.tsx  Launcher.tsx  MainSection.tsx  Patient.tsx  converter.ts  types.ts  utils.ts
Downloads/2024-neurals-main/codebase/frontend/src/assets/: snomed_icd_map.ts
Downloads/2024-neurals-main/logs/: 1-10-2024.md  12-9-2024.md  14-10-2024.md  15-8-2024.md  21-10-2024.md  22-8-2024.md  26-8-2024.md  27-9-2024.md  sample.md
Downloads/2024-neurals-main/tasks/: tasks.md
Downloads/DECO3801-main/: .env.example  README.md  app.py
Downloads/DECO3801-main/Frontend/: chat-ui.html  chat.js  scan.html  scan.js
Downloads/DECO3801-main/prompts/: base_prompt_more_params.txt  language_prompt1.txt  language_prompt2.txt
Frontend/: AR Module.html  Login Page.html  chat-style.css  chat.js  mode.html  scan.css
prompts/: base_prompt1.txt  base_prompt2.txt  image_identify_prompt.txt
