[project]
name = "reality-mapper"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "openai>=1.79.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "supabase>=2.15.1",
    "ultralytics>=8.3.141",
    "waitress>=3.0.2",
]
