[project]
name = "coughoverflow"
version = "0.1.0"
description = ""
authors = [
    {name = "V4N5HM",email = "s4820705@student.uq.edu.au"}
]
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
